--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     cache: false
     check-template: true
     check-template-location: true
-    content-type: text/html
+  #  content-type: text/html
     enabled: true
     encoding: UTF-8
     # excluded-view-names:
@@ -18,5 +18,5 @@ spring:
     suffix: .html
     # template-resolver-order:
     # view-names:
-    #servlet:
-     # content-type: text/html
+    servlet:
+      content-type: text/html
