Ajout du MVC pour User - accès à la base KO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 messages:
 home: Salut depuis le fichier YML !
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/escalade
+spring.datasource.username=postgres
+spring.datasource.password=Melbour9$
+#spring.datasource.initialization-mode=always
+#0spring.datasource.initialize=true
+#spring.datasource.schema=classpath:/schema.sql
+spring.datasource.continue-on-error=true
+#stacktrace pour afficher les infos sur error dans error.html ?
+server.error.include-stacktrace=always
