--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,23 @@
-messages:
-home: Salut depuis le fichier YML !
-
+# JPA / HIbernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Database
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/escalade
 spring.datasource.username=postgres
 spring.datasource.password=Melbour9$
-#spring.datasource.initialization-mode=always
-#0spring.datasource.initialize=true
-#spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
+
+
 #stacktrace pour afficher les infos sur error dans error.html ?
 server.error.include-stacktrace=always
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Messages:
+home=Salut depuis le fichier properties !
