--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: ${PORT:8080}
 
 messages:
-  home: Salut tout le monde !
+  home: Salut tout le monde YML !
 
 spring:
   thymeleaf:
