--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.datasource.continue-on-error=true
 #stacktrace pour afficher les infos sur error dans error.html ?
 server.error.include-stacktrace=always
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Messages:
 home=Salut depuis le fichier properties !
