--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # Database
@@ -20,4 +20,5 @@ server.error.include-stacktrace=always
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Messages:
+spring.messages.basename=validation
 home=Salut depuis le fichier properties !
