Fonctionnalités F9 et F10 implémentées et fonctionnelles

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,6 +1,6 @@
 NotEmpty=Ce champs est requis.
 Size.utilisateurForm.pseudo=Mot de passe sur 3 \u00E0 10 caract\u00E8res.
 Size.utilisateurForm.nomUtilisateur=Entrez 2 \u00E0 50 caract\u00E8res.
-Duplicate.utilisateurForm.pseudo=Pseudo d\u00E9j\u00E0 utilisé.
+Duplicate.utilisateurForm.pseudo=Pseudo d\u00E9j\u00E0 utilis\u00E9.
 Size.utilisateurForm.password=Mot de passe sur 3 \u00E0 10 caract\u00E8res.
 Diff.utilisateurForm.passwordConfirm=Les mots de passe ne correspondent pas.
